// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Texts should render correctly (snapshot) 1`] = `
<div>
  <span
    class="ant-typography"
  >
    <strong />
  </span>
</div>
`;

exports[`Texts should render correctly (snapshot) 2`] = `
<div>
  <span
    class="ant-typography"
  >
    <i />
  </span>
</div>
`;

exports[`Texts should render correctly (snapshot) 3`] = `
<div>
  <span
    class="ant-typography"
  >
    <del />
  </span>
</div>
`;
